Finally fixed alignment issues for scoreboard, so today isn't a total loss I guess.

--- a/client/submissions.css
+++ b/client/submissions.css
@@ -185,6 +185,7 @@ body
 	padding:0px;
 	text-align:right;
 	vertical-align:text-top;
+	padding-top:1px;
 }
 .leaderboard .name
 {
@@ -195,6 +196,7 @@ body
 	width:200px;
 	text-align:center;
 	vertical-align:text-top;
+	padding-top:1px;
 }
 .leaderboard .stats
 {
@@ -203,6 +205,7 @@ body
 	padding:0px;
 	text-align:left;
 	vertical-align:text-top;
+	padding-top:1px;
 }
 /* Leaderbaord area style ends here
  *
